  DefaultEntity.validateType() now validates entity types, added a couple of related tests
  Values.DefaultValue bug fixed, did not propagate the value when firing a change event
  DefaultEntityDefinition.QueriedKeyGenerator bug fixed, caching of key query was problematic when working with different underlying databases
  ClientMonitorPanel, can now disconnect multiple clients at a time
  EntityLookupField.performLookup() bug fixed, did not handle null search string value
  EntityLookupField.performLookup() bug fixed, did not update colors after lookup
  EntityLookupField, constructor bug fixed, searchHint was initialized to early, must be done after the call to linkToModel() for the hint to show up right away
  EntityPanel.activatePanel() bug fixed, initial focus always went to the table instead of the edit panel when using keyboard navigation
  User, cached hashCode removed, unnecessary optimization
  EntityLookupField, constructor bug fixed, searchHint initialization moved further back
  EntityUtil.getModifiedProperty() and getModifiedExceptionMessage() added
  LocalEntityConnection.lockAndCheckForUpdate() and EntityEditPanel.handleException() now use the above
  DefaultEntityEditModel.getDefaultEntity() bug fixed, did not handle transient properties
  Configuration.FILTER_ON_MASTER_INSERT added
  EntityModel.get/setFilterOnMasterInsert() added
  DefaultEntityModel implements the above, tested
  Editing of long values implemented, LongField added along with LongInputProvider
  MaximumMatch bug fixed, no longer disregards key events if modifiers are present (CTRL-BACKSPACE beyond first character now works correctly)
  EntityUiUtil.createEntityField() improved
  DefaultEntityEditModel bug fixed, setEntity() was used during update() and delete(), which triggered isSetEntityAllowed(), doSetEntity() added for internal use
  IntelliJ analyzis run, Arrays.asList() with single items replaced with Collections.singletonList()