@@ -130,3 +130,5 @@ export_selected_done = Done exporting selected records to file
 
 property_value_too_large = value must be equal to or smaller than
 property_value_too_small = value must be equal to or larger than
+
+has_been_deleted = has been deleted
