@@ -130,3 +130,5 @@ export_selected_done = Valdar f\u00E6rslur hafa veri\u00F0 vista\u00F0ar \u00ED 
 
 property_value_too_large = gildi ver\u00F0ur a\u00F0 vera minna e\u00F0a jafnt og
 property_value_too_small = gildi ver\u00F0ur a\u00F0 vera st\u00E6rra e\u00F0a jafnt og
+
+has_been_deleted = hefur veri\u00F0 eytt
