@@ -3958,3 +3958,4 @@
   EntityUiUtil.createEntityField() improved
   DefaultEntityEditModel bug fixed, setEntity() was used during update() and delete(), which triggered isSetEntityAllowed(), doSetEntity() added for internal use
   IntelliJ analyzis run, Arrays.asList() with single items replaced with Collections.singletonList()
+  EntityUtil.getModifiedExceptionMessage() bug fixed, did not handle deleted entities
